Switched to using configurable blacklist and loot tables